--- a/index.css
+++ b/index.css
@@ -1,116 +1,350 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;900&display=swap');
 *{
-	margin: 0;
-	padding: 0;
-	font-style: sans-serif;
+    margin:0;
+    padding: 0;
+    font-family: 'Poppins',sans-serif;
+    font-size: 12px;
 }
 
-#main{
-	background: inherit;
-}
 
 nav{
-	background: slategrey;
-	margin: 2% 0px 0px 0px;
-	display: flex;
-	padding: 25px;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	max-width: 100%;
-	max-height: 10%;
+    position: sticky;
+    top:0%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    display: block;
+    z-index: 1;
 }
 
-#title{
-	font-size: 4vw;
-	text-align: center;
+#nav-left{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
+
+#nav-right{
+    display: flex;
+    flex-direction: row;
+    column-gap: 5rem;
+    /* justify-content: space-between; */
+    /* align-content: space-between; */
+}
+
+#nav-bar{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 3rem;
+    padding-right: 6rem;
+    padding-bottom: 1rem;
+    padding-left:6rem ;
+}
+
+.nav-icon{
+    color: #FF6961;
+}
+
+#nav-text{
+    font-size: 2.5rem;
+    color: #FF6961;
+    line-height: 1;
+    padding-left: 6px;
+}
+
+.nav-item{
+    /* margin: 0 6rem; */
+    /* padding-bottom: 10px; */
+    font-weight: 500;    
+}
+
+
+a:link,a:visited{
+    color: black;
+    text-decoration: none;
+}
+
+a:hover,a:active{
+    color: #FF6961;
+}
+
+
+.hero-box{
+    display: grid;
+    grid-template-columns: .75fr 1fr;
+}
+
+.hero-image{
+    position: relative;
+    width: 100%;
+    height: auto;
+    z-index: -1;
+}
+
+h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 5vw;
+    padding-left: 10vw;
+    padding-top: 6vw;
+    margin-right: -20vw;
+}
+
+.red-text{
+    color:#FF6961;
+    font-size: inherit;
+}
+
+
+
+#get-started
+{
+    background-color: #FF6961;
+    border: 0;
+    border-radius: 20px;
+    padding: 1.5vw 4vw;
+    color: whitesmoke;
+    font-family: 'Poppins', sans-serif;
+    cursor:pointer;
+}
+
+#get-started:hover{
+    color: #FF6961;
+    background-color: whitesmoke;
+}
+
+
 h2{
-	font-size: 2vw;
-	text-align: center;
-}
-
-main{
-	display: flex;
-	flex-direction: column;
-}
-
-.main-box{
-	width:  auto;
-	height: auto;
-	margin-top: 30px;
-	padding: 30px;
-	display: flex;
-	background: whitesmoke;
-	align-items: center;
-	justify-content: space-around;
-	flex-wrap: wrap;
-	flex: 0 1 auto;
-
-}
-
-#image{
-	width: auto;
-	height: 60vh;
-	padding: 15px;
-	background: white;
-	object-fit: cover;
-	align-self: center;
-
-}
-
-#img-div{
-	background: inherit;
-}
-
-#img-caption{
-	text-align: center;
-	font-style: monospace;
-	font-size:  1vw;
-}
-
-#tribute-info{
-	width: 25vw;
-	height: auto;
-	line-height: 20px;
-	padding-left: 30px;
-	line-height: 5vh;
-	letter-spacing: 2px;
-	padding-bottom: 20px;
-}
-
-@media (max-width: 500px){
-	#tribute-info{
-	width: 70vw;
-	height: auto;
-	line-height: 20px;
-	padding-left: 30px;
-	line-height: 5vh;
-	letter-spacing: 2px;
-	padding-bottom: 30px;
-	}
-}
-
-#tribute-info h3{
-	text-align: center;
-	padding-bottom: 2vw;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2vw;
+    font-weight: 300;
+    margin-top: 29%;
+    margin-left: 22%;
 }
 
 
-#tribute-link{
-	color: floralwhite;
-	text-decoration: none;
+hr{
+    width: 80%;
+    margin:auto;
+}
+
+.product-features{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 80%;
+    margin:auto;
+    margin-top: 2vw;
+    row-gap: 5rem;
+    column-gap: 4rem;
+}
+
+#caption-text-responsive{
+    display: none;
+}
+
+
+
+
+.card{
+    display: flex;
+    flex-direction: column;
+    background-image:linear-gradient(176deg, #FF6961, #ff5d55);
+    width: auto;
+    min-width: 15rem;
+    border-radius: 50px 50px 50px 50px;
+    /* margin: 5vw; */
+    /* margin-bottom: 0; */
+    padding: 20px;
+    /* padding-bottom: 0; */
+    min-height: 35rem;
+    max-height: 360px;
+    opacity: 100%;
+    /* box-shadow: 2px -4px 2px 2px black; */
+    /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
+    box-shadow: rgba(100, 100, 111, 0.25) 0px 7px 29px 0px;
+
+}
+
+
+
+.card-icon{
+    color: white;
+    align-self:center;
+    padding-top: 50px;
+    font-size: 6rem;
+    transition:font-size .5s, transform 3s;
+    cursor: default;
+}
+
+.card-icon:hover{
+    font-size: 8rem;
+    cursor: default;
+    transform: rotate3d(0,1,0,180deg);
+
+
+}
+
+
+
+.card-title{
+    color: whitesmoke;
+    align-self: center;
+    margin: unset;
+    margin-top: 25px;
+    font-size: 1.7rem;
+    font-weight: 300;
+    font-family: 'Poppins',sans-serif;
+}
+
+.card-text{
+    font-size:1rem;
+    color: whitesmoke ;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 200;
+    align-self: center;
+    padding: 20px;
+    text-align: justify;
+    /* display: none; */
 }
 
 footer{
-	text-align: center;
-	padding: 2vw;
-	background: slategrey;
-	letter-spacing: 1vw;
-	word-spacing: 2vw;
-	line-height: 4vw;
+    background-color: #FF6961;
+    width: 100%;
+    /* min-height: 17rem; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-flow: column;
 }
 
-strong {
-	color: blueviolet	;
+.footer-text{
+    font-family: monospace;
+    color: whitesmoke;
+    font-size: 13px;
+    text-align: left;
+    line-height: 2rem;
+    /* justify-content: left; */
+    padding:30px 60px;
+    /* padding-top: 30px; */
+    /* padding-bottom: 30px; */
 }
+
+
+footer div{
+    color: white ;
+    padding: 20px 60px;
+    text-align: right;
+    /* font-family: 'Poppins', sans-serif; */
+    font-weight: 500;
+    font-size: 2rem;
+    /* border-left: 4px solid whitesmoke; */
+}
+
+.footer-list{
+    border-left: .5rem solid whitesmoke;
+    bored    
+}   
+
+.footer-list ul{
+    display: flex;
+    list-style-type: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    line-height-step: 20px;
+    margin-top: 9px;
+    /* align-items: center; */
+}
+li + li{
+    margin-top: 1rem;
+}
+
+.footer-list a{
+    color: white;
+}
+
+.footer-list a:hover{
+    color:white
+}
+
+/* .blue-box{
+    background-image:linear-gradient(90deg, #686a6e, #2e3239);
+    width: auto;
+    border-radius: 0px 0px 50px 50px;
+    margin: 20px;
+    margin-top: 0px;
+    padding: 20px;
+    padding-top: 0px;
+    height: 300px;
+} */
+
+
+@media screen and (max-width: 600px) {
+    #nav-bar{
+        flex-direction: column;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .caption-text{
+        display: none;
+    }
+
+    #get-started{
+        margin-top: 80px;
+    }
+
+    #caption-text-responsive{
+        display: block;
+        text-align: center;
+        padding: 20px;
+        font-size: 1.25rem;
+    }
+
+    .product-features{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+
+    .card-icon:hover{
+        display: none;
+    }
+
+    .card-icon{
+        animation: rotation 4s infinite linear;
+        text-shadow: 2px 2px 2px rgba(100, 100, 111, 0.5);
+    }
+
+    footer{
+        grid-template-columns: none;
+        grid-template-rows: 2fr 1fr 2fr;
+        width: auto;
+    }
+
+    .footer-text{
+        padding: 10px;
+        color: rgb(255, 255, 255);
+        text-align: center;
+    }
+
+    footer div{
+        text-align: center;
+        padding-bottom: 0px;
+    }
+
+    .footer-list{
+        border-left: 1rem solid whitesmoke;
+    }
+
+    @keyframes rotation{
+        from{
+            transform: rotate3d(0,1,0,0deg);
+        }
+        to{
+            transform: rotate3d(0,1,0,360deg);
+        }
+    }
+  }
