changing nav style

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;900&display=swap');
+
 *{
     margin:0;
     padding: 0;
@@ -25,7 +26,7 @@ nav{
 }
 
 #nav-right{
-    display: flex;
+    display: none;
     flex-direction: row;
     column-gap: 5rem;
     /* justify-content: space-between; */
@@ -47,6 +48,8 @@ nav{
     color: #FF6961;
 }
 
+
+
 #nav-text{
     font-size: 2.5rem;
     color: #FF6961;
@@ -60,6 +63,30 @@ nav{
     font-weight: 500;    
 }
 
+#nav-block{
+    position: absolute;
+    right: 5%;
+    background-color: #ff5d55;
+    padding: 20px;
+    min-width: 20%;
+    z-index: 1;
+}
+
+.hidden{
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+}
+
+.unhidden{
+    opacity: 1;
+    transition: opacity 150ms ease-in-out;
+}
+
+#nav-block a{
+    display: block;
+    font-size: 2.5rem;
+    color: whitesmoke;
+}
 
 a:link,a:visited{
     color: black;
