--- a/index.css
+++ b/index.css
@@ -1,108 +1,84 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-style: sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-nav{
-	background: slategrey;
-	margin: 2% 0px 0px 0px;
-	display: flex;
-	padding: 25px;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	max-width: 100%;
-	max-height: 10%;
-}
-
-h1{
-	font-size: 4vw;
-	text-align: center;
-}
-h2{
-	font-size: 2vw;
-	text-align: center;
-}
-
-main{
-	display: flex;
-	flex-direction: column;
-}
-
-.main-box{
-	width:  auto;
-	height: auto;
-	margin-top: 30px;
-	padding: 30px;
-	display: flex;
-	background: whitesmoke;
-	align-items: center;
-	justify-content: space-around;
-	flex-wrap: wrap;
-	flex: 0 1 auto;
-
-}
-
-img{
-	width: auto;
-	height: 60vh;
-	padding: 15px;
-	background: white;
-	object-fit: cover;
+:root{
+    font-size:16px;
+    font-family:'Lato',sans-serif;
+    --r : 125;
+    --g: 129;
+    --b: 189;
+    --xx: 100;
+    --xy: 40;
+    --yy: 90;
+    --yx: 20;
+    --h: 100vh;
+    --w: 100vw;
 }
 
 
-
-figcaption{
-	text-align: center;
-	font-style: monospace;
-	font-size:  1vw;
+body{
+    background-color: rgb(var(--r),var(--g),var(--b));
+    /* transform: rotate(360deg); */
+    transition: 1s background-color cubic-bezier(0.785, 0.135, 0.15, 0.86), 1s transform ease-in-out  ;
 }
 
-.bio-box{
-	width: 25vw;
-	height: auto;
-	line-height: 20px;
-	padding-left: 30px;
-	line-height: 5vh;
-	letter-spacing: 2px;
-	padding-bottom: 20px;
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: auto;
 }
 
-@media (max-width: 500px){
-	.bio-box{
-	width: 70vw;
-	height: auto;
-	line-height: 20px;
-	padding-left: 30px;
-	line-height: 5vh;
-	letter-spacing: 2px;
-	padding-bottom: 30px;
-	}
+p{
+    background: #171717;
+    color: white;
+    padding: 1rem;
+    min-width: 20rem;
+    border-radius: 20px;
+    font-size: xx-large;
+    word-spacing: 1rem;
+    letter-spacing: 0.4rem;
 }
 
-.bio-box h3{
-	text-align: center;
-	padding-bottom: 2vw;
+p,button{
+    text-align: center;
+}
+
+button{
+    color: black;
+    background-color: rgba(0,0,0,0);
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 10rem;
+    height: 3rem;
+    font-size: large;
+}
+button:hover{
+    background: black;
+    color:whitesmoke;
+    transition: 600ms background ease-out, 500ms color ease-out, 550ms border ease-out;
+    border:none;
+}
+p:hover{
+    color: rgb(var(--r),var(--g),var(--b));
+    cursor: pointer;
+}
+
+button:active{
+    outline: 3px solid black;
+}
+
+.blue-text{
+    color: skyblue
 }
 
 
-a{
-	color: floralwhite;
-	text-decoration: none;
-}
+/* .bubble{
+    animation:10s float cubic-bezier(0.645, 0.045, 0.355, 1);    
+} */
 
-footer{
-	text-align: center;
-	padding: 2vw;
-	background: slategrey;
-	letter-spacing: 1vw;
-	word-spacing: 2vw;
-	line-height: 4vw;
-}
-
-strong {
-	color: blueviolet	;
-}
+/* @keyframes float {
+    from{}
+    to{top:10000px;}
+} */
